Edit profile dialog
Inizio stesura codice per l'editor del profilo utente

--- a/textedit/textedit.qrc
+++ b/textedit/textedit.qrc
@@ -39,5 +39,7 @@
         <file>images/win/textunder.png</file>
         <file>images/win/zoomin.png</file>
         <file>images/win/zoomout.png</file>
+        <file>images/win/colored-edit-profile.png</file>
+        <file>images/win/material-black-edit-profile.png</file>
     </qresource>
 </RCC>
