Edit profile dialog
Edit profile dialog terminato. Eventualmente aggiungere campi al profilo e permettere all'utente di cambiare username. Il cambio di username deve riflettersi sul server, considerando che è usato per effettuare il login, quindi necessaria interfaccia col server nel caso si volesse aggiungere la funzionalità

--- a/textedit/textedit.qrc
+++ b/textedit/textedit.qrc
@@ -41,5 +41,6 @@
         <file>images/win/zoomout.png</file>
         <file>images/win/colored-edit-profile.png</file>
         <file>images/win/profile-empty-pic.png</file>
+        <file>images/win/add-profile-image.png</file>
     </qresource>
 </RCC>
